<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/iv_add_photo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".navigation.AddPhotoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosans_kr_medium"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/division_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorDivision"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <ImageView
        android:id="@+id/iv_photo_preview"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/division_line"
        app:layout_constraintEnd_toStartOf="@id/text_layout"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_photo_preview"
        app:layout_constraintTop_toBottomOf="@+id/division_line"
        style="@style/PhotoTextInputLayoutStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/hint_image_content"
            android:layout_gravity="top"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_add_photo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/upload_image"
        app:layout_constraintEnd_toEndOf="@+id/text_layout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/text_layout"
        app:layout_constraintTop_toBottomOf="@+id/text_layout"
        android:theme="@style/ButtonStyle"/>


</androidx.constraintlayout.widget.ConstraintLayout>